# chkbit

./: .editorconfig  .gitignore  .travis.yml  404.html  LICENSE  Pipfile  README.md  chkbit.py  common.go  context.go  dedup.go  feed.xml  fuse.go  go.mod  go.sum  hashfile.go  ignore.go  ignore_test.go  index.go  index.html  indexdb.go  indexstore.go  os.go  os_darwin.go  os_linux.go  pyproject.toml  requirements.txt  run.py  setup.py  status.go  store.go  worker.go
.github/workflows/: build.yml  ci.yml  lint.yml  pyinstaller.yml
about/: index.html
assets/css/: custom.css  main.css
check/: context.go  hashfile.go  ignore.go  index.go  status.go  worker.go
chkbit/: __init__.py  context.py  hashfile.py  ignore.py  index.py  index_thread.py  indexthread.py  input_item.py  main.py  status.py
chkbit/cli/: __init__.py  main.py
chkbit_cli/: __init__.py  main.py  progress.py  sparklines.py
cli/: cli.py  main.py  rate_calc.py
cmd/chkbit/: dedup.go  help.go  main.go  rate_calc.go
cmd/chkbit/util/: progress.go  progress_test.go  ratecalc.go  size.go  sparkline_test.go  spinner.go  strings.go
dedup/: index.html
faq/: index.html
get/: index.html
how/: index.html
intutil/: size.go
scripts/: build  maketestsample  maketestsample.go  run_test.go  run_test_prep  run_test_prep.go  run_tests  tests  xbuild
term/: term.go  term_windows.go
usage/: index.html
util/: fm.go  lang.go  sparkline.go  strings_test.go
