[project]
name = "chkbit"
version = "2.4.0"
description = "chkbit checks the data integrity of your files"
authors = [
    {name = "Christian Zangl", email = "laktak@cdak.net"},
]
dependencies = [
  "blake3>=0.3.4",
]
requires-python = ">=3.6.0"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/laktak/chkbit-py"

[project.scripts]
chkbit = "chkbit.main:main"
