[project]
name = "chkbit"
version = "4.0.0"
description = "chkbit checks the data integrity of your files"
authors = [
    {name = "Christian Zangl", email = "laktak@cdak.net"},
]

# keep in sync with Pipfile
dependencies = [
  "blake3>=0.3.4",
]
requires-python = ">=3.7.0"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/laktak/chkbit-py"

[project.scripts]
chkbit = "chkbit_cli.main:main"

[tool.setuptools.packages.find]
include = ["chkbit","chkbit_cli"]
